--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -16,6 +16,7 @@ pre{
 }
 
 .answers{
+    margin-top: 5px;
     font-style: italic;
 }
 
@@ -29,4 +30,22 @@ pre{
 
 .red{
     color: red;
+}
+
+/* HTML Forms */
+form{
+    background-color: rgba(202, 198, 198, 0.521);
+    width: 600px;
+}
+
+fieldset{
+    padding: 10px;
+}
+
+form div{
+    margin: 15px 5px;
+}
+
+input[type=submit], input[type=reset]{
+    margin: 5px auto
 }
