--- a/CSS/Eindopdracht/res/css/chefkok.css
+++ b/CSS/Eindopdracht/res/css/chefkok.css
@@ -8,167 +8,233 @@ Dummy teksten: https://www.lipsum.com/
 Voor responsive design, zie 
  */
 
-*{
-margin: o;
-padding: 0;
+* {
+    margin: o;
+    padding: 0;
 }
 
-body{
-font-family: 'Lobster', cursive;
+p{
+    margin: 0;
+    padding: 0;
 }
 
-.cooking>div{
-    color: #6187d8;
-    width: 250px;
-    /* font-size: xx-large; */
-    font-size: 10px;    
+a{
+    text-decoration: none;
+    color: inherit;
 }
 
-.cooking>div h2{
-    font-size: xx-large;
+body {
+    font-size: 12px;
+    font-family: 'Lobster', cursive;
 }
 
-.cooking>div p, button{
-
-}
-h1, button{
-    color: #6187d8;
-    font-weight: bold;
-} 
-
-h2{
-    /* background-color: #fff; */
-    width: fit-content;
+header {
+    height: fit-content;
+    justify-content: flex-end;
+    
 }
 
-nav ul li{
-list-style-type: none;
+h2 {
+    font-size: 2rem;
+    margin-bottom: 5px;
+}
+
+nav ul {
+    justify-content: flex-end;
+}
+
+ul li {
+    margin-right: 5px;
+}
+
+nav ul li {
+    list-style-type: none;
 }
 
 /* Utils */
-.flex{
+.flex {
     display: flex;
 }
 
-.border{
-    border:1px solid black;
+.border {
+    border: 1px solid black;
 }
 
-.debug{
+.debug {
     color: red;
     background-color: hotpink;
 }
 
-.flex_center{
+.flex_center {
     justify-content: center;
     align-items: center;
 }
+/********** Einde Utils *********/
 
-#wrapper{
-width: 85%;
-height: 100%;
-margin: auto;
-background-color: #494848;
+#wrapper {
+    width: 85%;
+    height: 100%;
+    margin: auto;
+    background-color: #494848d8;
 }
 
-section .main_container{
-margin: 0 auto;
-background-color: red;
-/* width: 30px; */
-width: 5%;
+.main_container{
+    width: 75%;
+    margin: auto;
+    /* background-color: #fff; */
 }
 
-button {
-    /* color: aqua; */
-    /* opacity: 0, 0;  */
-    border: 2px solid black;
-    outline: none;
-    width: 75px;
-    height: 25px;
-    padding: 16px;
-    /* opacity: 100%; */
+.cooking{
+    position: relative;
+    
 }
-
-section .populair_dishes{
-/* background-color: #fff; */
-flex-direction: column;
-justify-content: space-around;
-align-items: center;
-}
-
-section .populair_dishes .card_container{
-    justify-content: space-around;
-}
-
-section .populair_dishes .card{
-    width: 250px;
-    flex-direction: column;
-}
-
-section .populair_dishes .card .card_thumb{
-    background-color: aqua;
-    height: fit-content;
-    width: fit-content;
-}
-
-section .populair_dishes .card .card_thumb a{
-
-}
-
-section .populair_dishes .card .card_thumb img{
-    width: 120px;
-}
-
-.card_footer a{
-
-}
-
-.content{
-    flex-direction: row;
-}
-
-section .menu_container{
-    flex-direction: column;
-    align-items: center;
-}
-
-section .menu_container content .menus{
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    height: fit-content;
-    /* background-color: aqua; */
-}
-
-.menu_item{
-    height: 120px;
-    width: 80px;
-}
-
-section .cooking { 
+/* .cooking {
     background: url("../img/cooking.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    filter: brightness(20%);
     height: 310px;
     justify-content: flex-end;
     box-sizing: border-box;
     padding: 100px;
-} 
-/* img height: 500px; width: 1900px; left: -10px; top: 10px; z-index: -1; */
+} */
 
-p ::before {
-    position: absolute; 
-    content: ''; 
-    color: rgb(97, 135, 216); 
+h2 {
+    font-size: 2rem;
+    margin-bottom: 5px;
 }
+
+.cooking img{
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+}
+
+.cooking_content {
+    position: absolute;
+    right: 40px;
+    color: #6187d8;
+    width: 250px;
+    font-weight: bold;
+}
+
+.cooking_content p{
+    margin-bottom: 10px;
+    font-style: italic;
+}
+
+.button {
+    font-size: .9em;
+    color: rgb(97, 135, 216);
+    border: 2px solid black;
+    outline: none;
+    width: 75px;
+    height: 25px;
+    background-color: none;
+    margin-right: 10px;
+}
+
+.button:hover{
+    color: rgb(128, 179, 128);
+}
+
+.populair_dishes {
+    /* background-color: #fff; */
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.populair_dishes .card_container {
+    justify-content: space-around;
+    width: 75%;
+}
+
+.populair_dishes .card {
+    margin: 5px;
+    width: 200px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.populair_dishes .card .card_thumb {
+    height: fit-content;
+    width: fit-content;
+    align-items: center;
+    justify-content: center;
+}
+
+.populair_dishes .card .card_thumb img {
+    width: 100%;
+}
+
+.populair_dishes .card .card_body{
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.populair_dishes .card .card_body .dish_head, .menu_head {
+    justify-content: space-between;
+}
+
+.populair_dishes .card .card_body .dish_body, .dish_title, .dish_price, .menu_price, .menu_title{
+    padding: 0;
+    margin: 0;
+}
+
+.populair_dishes .card .card_footer{
+    margin-top: 10px;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.content {    
+    flex-direction: row;
+}
+
+.menu_container {
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu_container .content .menus {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.menu_item {
+    width: 200px;
+    height: fit-content;
+    margin: 10px;
+    box-sizing: border-box;
+}
+
+/* p ::before {
+    position: absolute;
+    content: '';
+    color: rgb(97, 135, 216);
+} */
 
 footer {
     background-color: rgb(128, 179, 128);
-    left: 0;
-    bottom: 0;
-    width: 100%;
     color: rgb(97, 135, 216);
-    text-align: center;    
+    text-align: center;
     justify-content: space-around;
+    height: 250px;
+}
+
+footer .footer{
+    /* width: 65%; */
+}
+footer .footernav{
+    flex-direction: column;
+    justify-content: flex-start;
+    /* width: 65%; */
+    height: 50%;
+}
+
+footer .footernav a{
+    margin-bottom: 10px;
 }
