--- a/CSS/Eindopdracht/res/css/chefkok.css
+++ b/CSS/Eindopdracht/res/css/chefkok.css
@@ -9,13 +9,14 @@ Voor responsive design, zie
  */
 
 * {
-    margin: o;
+    margin: 0;
     padding: 0;
 }
 
 p{
     margin: 0;
     padding: 0;
+    /* font-size: .7em; */
 }
 
 a{
@@ -24,14 +25,14 @@ a{
 }
 
 body {
-    font-size: 12px;
+    font-size: 15px;
     font-family: 'Lobster', cursive;
 }
 
 header {
-    height: fit-content;
+    height: 30px;
     justify-content: flex-end;
-    
+    align-items: center;    
 }
 
 h2 {
@@ -65,10 +66,6 @@ nav ul li {
     background-color: hotpink;
 }
 
-.flex_center {
-    justify-content: center;
-    align-items: center;
-}
 /********** Einde Utils *********/
 
 #wrapper {
@@ -79,42 +76,40 @@ nav ul li {
 }
 
 .main_container{
-    width: 75%;
+    width: 85%;
     margin: auto;
     /* background-color: #fff; */
 }
 
 .cooking{
     position: relative;
-    
+    background-color: #000;
 }
-/* .cooking {
-    background: url("../img/cooking.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: brightness(20%);
-    height: 310px;
-    justify-content: flex-end;
-    box-sizing: border-box;
-    padding: 100px;
-} */
 
 h2 {
-    font-size: 2rem;
-    margin-bottom: 5px;
+    font-size: 3rem;
+    margin-bottom: .5em;
+    box-sizing: border-box;
 }
 
 .cooking img{
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    height: 250px;
+    flex-direction: column;
+    opacity: .19;
 }
 
 .cooking_content {
     position: absolute;
-    right: 40px;
+    right: 150px;
+    /* top: 5px; */
     color: #6187d8;
-    width: 250px;
+    width: 200px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     font-weight: bold;
+    box-sizing: border-box;
 }
 
 .cooking_content p{
@@ -125,32 +120,38 @@ h2 {
 .button {
     font-size: .9em;
     color: rgb(97, 135, 216);
-    border: 2px solid black;
+    border: 2px solid #6187d849;
     outline: none;
     width: 75px;
     height: 25px;
     background-color: none;
     margin-right: 10px;
+    text-align: center;
 }
 
+.button p{
+    font-size: 1.2em;
+    font-style: normal;
+    justify-content: center;
+    align-items: center;  
+}
 .button:hover{
     color: rgb(128, 179, 128);
 }
 
 .populair_dishes {
-    /* background-color: #fff; */
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
 
 .populair_dishes .card_container {
-    justify-content: space-around;
-    width: 75%;
+    justify-content: space-between;
+    width: 85%;
 }
 
 .populair_dishes .card {
-    margin: 5px;
+    margin-right: 30px;
     width: 200px;
     flex-direction: column;
     align-items: center;
@@ -158,7 +159,7 @@ h2 {
 
 .populair_dishes .card .card_thumb {
     height: fit-content;
-    width: fit-content;
+    /* width: fit-content; */
     align-items: center;
     justify-content: center;
 }
@@ -193,45 +194,169 @@ h2 {
 }
 
 .menu_container {
-    flex-direction: column;
-    align-items: center;
-}
-
-.menu_container .content .menus {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    /* align-items: center;
+    justify-content: space-evenly; */
+    margin-top: 35px;
     width: 100%;
 }
 
-.menu_item {
-    width: 200px;
-    height: fit-content;
-    margin: 10px;
+.chef_thumb{
+    align-items: flex-end;
+}
+
+.menu_container h2{
+    text-align: center;
+}
+
+.menus {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 950px;
     box-sizing: border-box;
 }
 
-/* p ::before {
-    position: absolute;
-    content: '';
-    color: rgb(97, 135, 216);
-} */
+.menu_item {
+    width: 250px;
+    height: fit-content;
+    margin: 5px;
+}
+
+.menu_item p{
+    font-size: 11px;
+}
 
 footer {
     background-color: rgb(128, 179, 128);
     color: rgb(97, 135, 216);
-    text-align: center;
     justify-content: space-around;
-    height: 250px;
+    height: 150px;
+    box-sizing: border-box;
+}
+
+footer .footer{
+    margin-left: 100px;
 }
 
 footer .footernav{
     flex-direction: column;
     justify-content: flex-start;
-    /* width: 65%; */
-    height: 50%;
+    margin-right: 200px;
+}
+
+footer .footernav h3, .footernav a{
+    margin-bottom: 0;
 }
 
 footer .footernav a{
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+}
+
+@media only screen and (max-width: 480px){
+    body{
+        font-size: 14px;
+    }
+
+    h2{
+        text-align: center;
+        font-size: 50px;
+    }
+
+    .cooking img, .cooking_content{
+        display: none;
+    }
+
+    .card_container{
+        flex-direction: column;
+        align-items: center;
+        /* width: 400px; */
+    }
+
+    .card{
+        width: 100%;
+        margin-bottom: 20px;
+        margin-right: 0;
+        background-color: #fff;
+    }
+
+    .menu_item{
+        width: 300px;
+    }
+
+    .chef_thumb{
+        display: none;
+    }
+
+    .footernav h3, .footernav p, .footer h3, .footer p{
+        display: none;
+        /* flex-direction: row; */
+        
+    }
+
+    .footernav, .footer{
+        flex-direction: row;
+        justify-content: space-between;
+        width: 1200px;
+        margin-bottom: 10px;
+    }
+
+    .footer i{
+        /* width: 100px; */
+        /* height: 200px; */
+        background-color: khaki;
+    }
+    
+}
+
+@media only screen and (min-width: 480px) and (max-width: 820px){
+    
+    nav ul{
+        font-size: 20px;
+    }
+    .cooking img{
+        display: none;
+    }
+
+    .cooking .cooking_content{
+        display: none;
+    }
+    
+    .cooking h2{
+        font-size: 1px;
+    }
+    .chef_thumb{
+        display: none;
+    }
+
+    footer{
+        justify-content: center;
+        /* font-size: 20px; */
+    }
+
+    .footer, .footernav{
+        margin-left: 0;
+        margin-left: 0;
+    }
+
+}
+
+
+
+@media only screen and (min-width: 820px) and (max-width: 1371px){
+    .chef_thumb{
+        display: none;
+    }
+
+    .card_container{
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu_container{
+        text-align: center;
+    }
+    .menus{
+        /* flex-direction: column; */
+        align-items: center;
+    }
 }
