--- a/SCSS/res/SCSS/_nest_vars.scss
+++ b/SCSS/res/SCSS/_nest_vars.scss
@@ -16,7 +16,7 @@ h1 {
 
     // Opdracht 4
     // Maakt een nieuw block aan met de parent-element en daar de :hover-selector erop af
-    &:hover{
+    :hover{
         background-color: #ddd;
     }
 }
@@ -39,6 +39,10 @@ h1 {
         span{
             font-size: 24px;
             line-height: 200px;
+
+            :hover{
+                background-color: red;
+            }
         }
     }
 }
