--- a/JavaScript/eindopdracht/style.css
+++ b/JavaScript/eindopdracht/style.css
@@ -19,25 +19,26 @@ h1 {
 }
 
 button {
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    padding: 30px;
+    /* border-radius: 50%; */
+    height: 60px;
+    width: 60px;
+    padding: 10px;
     font-size: 15px;
     font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
     outline: none;
-    border: none;
-    /* flex-grow: 1; */ 
+    /* border: none; */
+    border: 2px solid black;
+    flex-grow: 1;
 }
 
 button:active{
     background-color: #ffffff;
 }
 
-/* Utilities */
+/** IDs */
 #zero {
     flex-grow: 2;
 }
@@ -66,6 +67,7 @@ button:active{
     font-size: 16px;
 }
 
+/* Utilities */
 .border {
     border: 2px solid purple;
 }
@@ -97,23 +99,23 @@ button:active{
 .buttonsContainer {
     padding: 30px;
     background-color: rgb(0, 0, 0);
-    /* height: fit-conte; */
-    /* width: inherit; */
-    /* align-content: space-between; */
-    flex-wrap: inherit;
+    height: 450px;
+    /* align-items: stretch; */
+    flex-wrap: wrap;
     justify-content: space-between;
+    /* justify-content: center; */
 }
 
 .numbersContainer {
     flex-wrap: wrap;
     justify-content: space-between;
     height: 300px;
-    width: inherit;
-    flex-grow: 1;
+    width: 80%;
+    /* flex-grow: .5; */
 }
 
 .opContainer {
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: space-between;
     align-items: center;
 }
@@ -123,16 +125,17 @@ button:active{
     justify-content: space-between;
 }
 
-.opContainer .operators {
+.operators {
     background-color: orange;
     color: white;
     flex-direction: column;
     font-size: 14px;
 }
-.opContainer .clicked{
+
+.operators:active{
     background-color: green;
 }
 
-.numbersContainer .numbers {
+.numbers {
     background-color: rgb(90, 88, 88);
 }
